# pg-logical-mcp

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
docker/: docker-compose.yml  init-publisher.sql  init-subscriber.sql
scenarios/: _common.py  slot_retention.py  stuck_subscription.py
src/pg_logical_mcp/: __init__.py  diagnostics.py  server.py
src/pg_logical_mcp/providers/: __init__.py  base.py  postgres.py
src/pg_logical_mcp/tools/: __init__.py  cdc.py  publications.py  publisher.py  remediation.py  slots.py  subscriptions.py
tests/: test_diagnostics.py
